--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,63 @@
-<h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chalermpon's Resume</title>
+</head>
+<body>
+    <h1>Chalermpon Rueangrit</h1>
+    <img src="../assets/images/Profile.jpg" height=200 />
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+    <h2>Summary</h2>
+    <p>As a Technical at GENERATION X AI, I use my skills in technical presales, technology solutions,</p>
+    <p>and solution implementation to support the sales team and deliver innovative and customized</p>
+    <p>IT solutions to clients across various industries.</p>
+    <hr />
+    <h2>Education</h2>
+    <ul>
+        <li>First Class Honors in Bachelor's Degree of Computer Technology (Computer Technology and Network)</li>
+    </ul>
+    <hr />
+    <h2>Work Experience</h2>
+    <ul>
+        <li><h3>Technical - Generation X AI</h3></li>
+        <p>April 2023 - Present</p>
+            <ul>
+                <li>Provide the technical support and troubleshooting to customer.</li>
+                <li>Setup system to demonstrate to customer.</li>
+                <li>Support sale team in the technical part.</li>
+                <li>Visited partner and do the training for system.</li>
+                <li>Remote / Onsite customer support.</li>
+            </ul>
+        <li><h3>Technical Specialist - eMerchant</h3></li>
+        <p>August 2020 - March 2023</p>
+            <ul>
+                <li>Provide technical support and troubleshooting to customer.</li>
+                <li>Learning the new product and testing before bringing them to sales team.</li>
+                <li>In case of the company developing new software, will do the testing and report deflect to the developer team</li>
+                <li>User Acceptance Test</li>
+                <li>Remote / Onsite customer support.</li>
+            </ul>
+    </ul>
+    <hr />
+    <h2>Skills</h2>
+    <ul>
+        <li>Implementation</li>
+        <li>Problem-Solving</li>
+        <li>Technical Support</li>
+        <li>User Training</li>
+        <li>POS System</li>
+    </ul>
+    <hr />
+    <h2>Other</h2>
+    <ul>
+        <li><a href="">Contact Me</a></li>
+    </ul>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+    <footer >
+        <p>© Chalermpon Tae. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
